# sandbox

./: .gitignore
xp001/: README.md  pyproject.toml
xp001/project/: settings.py
xp001/project/core/: models.py
xp001/project/core/tests/: test_core.py
xp001/project/localflavors/: __init__.py  br.py  ident.py  registry.py
xp001/project/localflavors/tests/: test_ident.py
