[tool.poetry]
name = "xp001"
version = "0.1.0"
description = ""
authors = ["Henrique Bastos <henrique@bastos.net>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
minversion = "6.0"
addopts = "-ra -q --no-migrations"
testpaths = [
    "tests",
    "integration",
]
